@@ -66,7 +66,7 @@ public class MConversionType extends X_C_ConversionType
 			+ "ORDER BY IsDefault DESC, AD_Client_ID DESC";
 		C_ConversionType_ID = DB.getSQLValue(null, sql, AD_Client_ID);
 		//	Return
-		s_cache.put(key, new Integer(C_ConversionType_ID));
+		s_cache.put(key, Integer.valueOf(C_ConversionType_ID));
 		return C_ConversionType_ID;
 	}	//	getDefault
 	
