@@ -256,7 +256,7 @@ public abstract class PO
 	private HashMap<String,Object>	m_attributes = null;
 
 	/** Zero Integer				*/
-	protected static final Integer I_ZERO = new Integer(0);
+	protected static final Integer I_ZERO = Integer.valueOf(0);
 	/** Accounting Columns			*/
 	private ArrayList <String>	s_acctColumns = null;
 
@@ -657,7 +657,7 @@ public abstract class PO
 		{
 			int result = ((Integer)nValue).intValue();
 			result -= ((Integer)oValue).intValue();
-			return new Integer(result);
+			return Integer.valueOf(result);
 		}
 		//
 		log.warning("Invalid type - New=" + nValue);
@@ -830,7 +830,7 @@ public abstract class PO
 					&& p_info.getColumnClass(index) == Integer.class)
 				try
 				{
-					m_newValues[index] = new Integer((String)value);
+					m_newValues[index] = Integer.valueOf((String)value);
 				}
 				catch (NumberFormatException e)
 				{
@@ -1283,7 +1283,7 @@ public abstract class PO
 		if (ID > 0)
 		{
 			setKeyInfo();
-			m_IDs = new Object[] {new Integer(ID)};
+			m_IDs = new Object[] {Integer.valueOf(ID)};
 			//m_KeyColumns = new String[] {p_info.getTableName() + "_ID"};
 			load(trxName);
 		}
@@ -1399,7 +1399,7 @@ public abstract class PO
 			try
 			{
 				if (clazz == Integer.class)
-					m_oldValues[index] = decrypt(index, new Integer(rs.getInt(columnName)));
+					m_oldValues[index] = decrypt(index, Integer.valueOf(rs.getInt(columnName)));
 				else if (clazz == BigDecimal.class)
 					m_oldValues[index] = decrypt(index, rs.getBigDecimal(columnName));
 				else if (clazz == Boolean.class)
@@ -1475,7 +1475,7 @@ public abstract class PO
 			try
 			{
 				if (clazz == Integer.class)
-					m_oldValues[index] = new Integer(value);
+					m_oldValues[index] = Integer.valueOf(value);
 				else if (clazz == BigDecimal.class)
 					m_oldValues[index] = new BigDecimal(value);
 				else if (clazz == Boolean.class)
@@ -1634,9 +1634,9 @@ public abstract class PO
 			else if (colName.equals("IsActive"))
 				m_newValues[i] = Boolean.TRUE;
 			else if (colName.equals("AD_Client_ID"))
-				m_newValues[i] = new Integer(Env.getAD_Client_ID(p_ctx));
+				m_newValues[i] = Integer.valueOf(Env.getAD_Client_ID(p_ctx));
 			else if (colName.equals("AD_Org_ID"))
-				m_newValues[i] = new Integer(Env.getAD_Org_ID(p_ctx));
+				m_newValues[i] = Integer.valueOf(Env.getAD_Org_ID(p_ctx));
 			else if (colName.equals("Processed"))
 				m_newValues[i] = Boolean.FALSE;
 			else if (colName.equals("Processing"))
@@ -1748,7 +1748,7 @@ public abstract class PO
 	 */
 	final protected void setAD_Client_ID (int AD_Client_ID)
 	{
-		set_ValueNoCheck ("AD_Client_ID", new Integer(AD_Client_ID));
+		set_ValueNoCheck ("AD_Client_ID", Integer.valueOf(AD_Client_ID));
 	}	//	setAD_Client_ID
 
 	/**
@@ -1769,7 +1769,7 @@ public abstract class PO
 	 */
 	final public void setAD_Org_ID (int AD_Org_ID)
 	{
-		set_ValueNoCheck ("AD_Org_ID", new Integer(AD_Org_ID));
+		set_ValueNoCheck ("AD_Org_ID", Integer.valueOf(AD_Org_ID));
 	}	//	setAD_Org_ID
 
 	/**
@@ -1875,7 +1875,7 @@ public abstract class PO
 	 */
 	final protected void setUpdatedBy (int AD_User_ID)
 	{
-		set_ValueNoCheck ("UpdatedBy", new Integer(AD_User_ID));
+		set_ValueNoCheck ("UpdatedBy", Integer.valueOf(AD_User_ID));
 	}	//	setAD_User_ID
 
 	/**	Cache						*/
@@ -2502,7 +2502,7 @@ public abstract class PO
 				if (!changes && !updatedBy)
 				{
 					int AD_User_ID = Env.getContextAsInt(p_ctx, "#AD_User_ID");
-					set_ValueNoCheck("UpdatedBy", new Integer(AD_User_ID));
+					set_ValueNoCheck("UpdatedBy", Integer.valueOf(AD_User_ID));
 					sql.append("UpdatedBy=").append(AD_User_ID);
 					changes = true;
 					updatedBy = true;
@@ -2681,7 +2681,7 @@ public abstract class PO
 			if (!updatedBy)	//	UpdatedBy not explicitly set
 			{
 				int AD_User_ID = Env.getContextAsInt(p_ctx, "#AD_User_ID");
-				set_ValueNoCheck("UpdatedBy", new Integer(AD_User_ID));
+				set_ValueNoCheck("UpdatedBy", Integer.valueOf(AD_User_ID));
 				if (withValues)
 				{
 					sql.append(",UpdatedBy=").append(AD_User_ID);
@@ -2755,7 +2755,7 @@ public abstract class PO
 				log.severe("No NextID (" + no + ")");
 				return saveFinish (true, false);
 			}
-			m_IDs[0] = new Integer(no);
+			m_IDs[0] = Integer.valueOf(no);
 			set_ValueNoCheck(m_KeyColumns[0], m_IDs[0]);
 		}
 		//uuid secondary key
@@ -4341,7 +4341,7 @@ public abstract class PO
 			pstmt = DB.prepareStatement(sql.toString(), trxName);
 			rs = pstmt.executeQuery();
 			while (rs.next())
-				list.add(new Integer(rs.getInt(1)));
+				list.add(Integer.valueOf(rs.getInt(1)));
 		}
 		catch (SQLException e)
 		{
