@@ -100,7 +100,7 @@ public final class AppsAction extends AbstractAction
 			if (ch != ' ')
 			{
 				toolTipText = toolTipText.substring(0, pos) + toolTipText.substring(pos+1);
-				putValue(Action.MNEMONIC_KEY, new Integer(ch.hashCode()));
+				putValue(Action.MNEMONIC_KEY, Integer.valueOf(ch.hashCode()));
 			}
 		}
 		//
@@ -125,7 +125,7 @@ public final class AppsAction extends AbstractAction
 		putValue(Action.SHORT_DESCRIPTION, toolTipText);	//	Tooltip
 		putValue(Action.ACTION_COMMAND_KEY, m_action);      //  ActionCammand
 		putValue(Action.ACCELERATOR_KEY, accelerator);      //  KeyStroke
-	//	putValue(Action.MNEMONIC_KEY, new Integer(0));      //  Mnemonic
+	//	putValue(Action.MNEMONIC_KEY, Integer.valueOf(0));      //  Mnemonic
 	//	putValue(Action.DEFAULT, text);						//	Not Used
 
 		//	Create Button
