@@ -856,7 +856,7 @@ public final class APanel extends CPanel
 						//	Is this tab included?
 						if (includedMap.size() > 0)
 						{
-							GridController parent = (GridController)includedMap.get(new Integer(gTab.getAD_Tab_ID()));
+							GridController parent = (GridController)includedMap.get(Integer.valueOf(gTab.getAD_Tab_ID()));
 							if (parent != null)
 							{
 								// FR [ 1757088 ]
@@ -2333,7 +2333,7 @@ public final class APanel extends CPanel
 		{
 			if (queryColumn.endsWith("_ID"))
 				query.addRestriction(queryColumn, MQuery.EQUAL,
-					new Integer(Env.getContextAsInt(m_ctx, m_curWindowNo, queryColumn)),
+					Integer.valueOf(Env.getContextAsInt(m_ctx, m_curWindowNo, queryColumn)),
 					infoName, infoDisplay);
 			else
 				query.addRestriction(queryColumn, MQuery.EQUAL,
@@ -2366,7 +2366,7 @@ public final class APanel extends CPanel
 		{
 			if (link.endsWith("_ID"))
 				query.addRestriction(link, MQuery.EQUAL,
-					new Integer(Env.getContextAsInt(m_ctx, m_curWindowNo, link)));
+					Integer.valueOf(Env.getContextAsInt(m_ctx, m_curWindowNo, link)));
 			else
 				query.addRestriction(link, MQuery.EQUAL,
 					Env.getContext(m_ctx, m_curWindowNo, link));
