@@ -245,7 +245,7 @@ public class VPayPrint extends PayPrint implements FormPanel, ActionListener, Ve
 			return;
 
 		m_C_PaySelection_ID = C_PaySelection_ID;
-		paySelectSearch.setValue(new Integer(m_C_PaySelection_ID));
+		paySelectSearch.setValue(Integer.valueOf(m_C_PaySelection_ID));
 		loadPaySelectInfo();
 	}	//	setsetPaySelection
 
