@@ -132,7 +132,7 @@ public class VPaymentFormCheck extends PaymentFormCheck implements ActionListene
 		}
 		
 		//	Is the currency an EMU currency?
-		Integer C_Currency_ID = new Integer(m_C_Currency_ID);
+		Integer C_Currency_ID = Integer.valueOf(m_C_Currency_ID);
 		if (s_Currencies.containsKey(C_Currency_ID))
 		{
 			Enumeration<Integer> en = s_Currencies.keys();
