@@ -59,7 +59,7 @@ public class WPAttributeEditor extends WEditor implements ContextMenuListener
 	private GridTab m_GridTab;
 
 	/**	No Instance Key					*/
-	private static Integer		NO_INSTANCE = new Integer(0);
+	private static Integer		NO_INSTANCE = Integer.valueOf(0);
 
 	public WPAttributeEditor(GridTab gridTab, GridField gridField)
 	{
@@ -275,7 +275,7 @@ public class WPAttributeEditor extends WEditor implements ContextMenuListener
 		if (M_AttributeSetInstance_ID == 0)
 			setValue(null);
 		else
-			setValue(new Integer(M_AttributeSetInstance_ID));
+			setValue(Integer.valueOf(M_AttributeSetInstance_ID));
 
 		ValueChangeEvent vce = new ValueChangeEvent(this, gridField.getColumnName(), new Object(), getValue());
 		fireValueChange(vce);
