@@ -281,7 +281,7 @@ public class InfoPaymentPanel extends InfoPanel implements ValueChangeListener, 
 		String bp = Env.getContext(Env.getCtx(), p_WindowNo, "C_BPartner_ID");
 
 		if (bp != null && bp.length() != 0)
-			fBPartner_ID.setValue(new Integer(bp));
+			fBPartner_ID.setValue(Integer.valueOf(bp));
 
 		// Prepare table
 		StringBuilder where = new StringBuilder("p.IsActive='Y'");
